[gd_scene load_steps=20 format=3 uid="uid://b5630xr4v607r"]

[ext_resource type="Script" path="res://scenes/ui/menus/hud/hud.gd" id="1_cuep3"]
[ext_resource type="Theme" uid="uid://dr31fy67cgji3" path="res://assets/resources/themes/generic.tres" id="2_jel3x"]
[ext_resource type="Texture2D" uid="uid://disuxhruldd8h" path="res://assets/ui/icons/Bouton Pause.png" id="2_meysh"]
[ext_resource type="Texture2D" uid="uid://cml3pcp3ixa0k" path="res://assets/ui/huds/Coeur.png" id="2_neukb"]
[ext_resource type="Texture2D" uid="uid://bcvoasbjyvuy5" path="res://assets/ui/huds/Barre de vie.png" id="3_g6v8d"]
[ext_resource type="PackedScene" uid="uid://h0drgd3amf85" path="res://scenes/ui/menus/hud/tower_card.tscn" id="3_mkldi"]
[ext_resource type="Texture2D" uid="uid://d33ngfvvwv501" path="res://assets/ui/huds/Barre de vie ombre.png" id="4_4h2ri"]
[ext_resource type="PackedScene" uid="uid://cq705nqdp8fnw" path="res://scenes/gameplay/entities/tower/towers/first_tower.tscn" id="4_ro8fv"]
[ext_resource type="Texture2D" uid="uid://cf3qgahrw8xo1" path="res://assets/ui/huds/Vie@2x.png" id="5_hukgj"]
[ext_resource type="Texture2D" uid="uid://dg0hpeoeleiff" path="res://assets/ui/huds/Coins@2x.png" id="7_1sk4j"]
[ext_resource type="Texture2D" uid="uid://bcga3gamtf11v" path="res://assets/ui/huds/Waves@2x.png" id="8_ewojn"]
[ext_resource type="Script" path="res://scenes/ui/menus/hud/new_wave_count.gd" id="9_o6rym"]
[ext_resource type="Texture2D" uid="uid://1mu5cdhd5hw8" path="res://assets/ui/icons/build_button.png" id="10_sc2vu"]
[ext_resource type="Texture2D" uid="uid://bel17gs3ijyb1" path="res://assets/environment/backgrounds/Fond Menu 02@2x.png" id="11_p2vl4"]
[ext_resource type="Texture2D" uid="uid://nr3ul4jgyad0" path="res://assets/ui/icons/Bouton Annuler.png" id="12_7moo4"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_f3r3y"]
texture = ExtResource("11_p2vl4")
texture_margin_top = 31.0
expand_margin_left = 25.0
expand_margin_right = 25.0
expand_margin_bottom = 25.0
modulate_color = Color(1, 1, 1, 0.784314)

[sub_resource type="Animation" id="Animation_fpn5b"]
length = 0.35
step = 0.05
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath("VBoxContainer:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.35)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("VBoxContainer:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(392, -0.25, 0, 0.25, 0, 555, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.35)
}

[sub_resource type="Animation" id="Animation_wc0kk"]
resource_name = "show_tower_list"
length = 0.35
step = 0.05
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath("VBoxContainer:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.35)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("VBoxContainer:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(555, -0.25, 0, 0.25, 0, 392, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.35)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_omyie"]
_data = {
"RESET": SubResource("Animation_fpn5b"),
"show_tower_list": SubResource("Animation_wc0kk")
}

[node name="HUD" type="Control"]
texture_filter = 6
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_cuep3")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0
mouse_filter = 2
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20

[node name="PauseButton" type="TextureButton" parent="MarginContainer"]
custom_minimum_size = Vector2(80, 65)
layout_mode = 2
texture_normal = ExtResource("2_meysh")
ignore_texture_size = true
stretch_mode = 5

[node name="HUDMarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(0, 135)
layout_mode = 1
anchors_preset = -1
anchor_right = 0.3
anchor_bottom = 0.3
offset_right = 30.4
offset_bottom = 25.6
size_flags_horizontal = 3
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15

[node name="HUDVBoxContainer" type="VBoxContainer" parent="HUDMarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 2

[node name="HeartTextureRect" type="TextureRect" parent="HUDMarginContainer/HUDVBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("2_neukb")
expand_mode = 3
stretch_mode = 4

[node name="HealthMarginContainer" type="MarginContainer" parent="HUDMarginContainer/HUDVBoxContainer/HeartTextureRect"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.2
anchor_right = 1.0
anchor_bottom = 0.8
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30

[node name="BottomHealthTextureRect" type="TextureRect" parent="HUDMarginContainer/HUDVBoxContainer/HeartTextureRect/HealthMarginContainer"]
z_index = -1
z_as_relative = false
layout_mode = 2
texture = ExtResource("3_g6v8d")
expand_mode = 2

[node name="ShadowHealthMarginContainer" type="MarginContainer" parent="HUDMarginContainer/HUDVBoxContainer/HeartTextureRect/HealthMarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = -5
theme_override_constants/margin_bottom = -10

[node name="ShadowHealthTextureRect" type="TextureRect" parent="HUDMarginContainer/HUDVBoxContainer/HeartTextureRect/HealthMarginContainer/ShadowHealthMarginContainer"]
z_index = -2
z_as_relative = false
layout_mode = 2
texture = ExtResource("4_4h2ri")
expand_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="HUDMarginContainer/HUDVBoxContainer/HeartTextureRect/HealthMarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 8

[node name="HealthTextureProgressBar" type="TextureProgressBar" parent="HUDMarginContainer/HUDVBoxContainer/HeartTextureRect/HealthMarginContainer/MarginContainer"]
z_index = -1
z_as_relative = false
layout_mode = 2
max_value = 10.0
value = 9.0
rounded = true
nine_patch_stretch = true
texture_progress = ExtResource("5_hukgj")

[node name="HealthLabel" type="Label" parent="HUDMarginContainer/HUDVBoxContainer/HeartTextureRect/HealthMarginContainer/MarginContainer/HealthTextureProgressBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 5.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme = ExtResource("2_jel3x")
theme_type_variation = &"UILabel"
theme_override_font_sizes/font_size = 24
text = "INGAMEHUD.HEALTH.LABEL"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CoinsWavesMarginContainer" type="MarginContainer" parent="HUDMarginContainer/HUDVBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="CoinsWavesHBoxContainer" type="HBoxContainer" parent="HUDMarginContainer/HUDVBoxContainer/CoinsWavesMarginContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="CoinsTextureRect" type="TextureRect" parent="HUDMarginContainer/HUDVBoxContainer/CoinsWavesMarginContainer/CoinsWavesHBoxContainer"]
texture_filter = 6
layout_mode = 2
texture = ExtResource("7_1sk4j")
expand_mode = 3
stretch_mode = 4

[node name="MarginContainer" type="MarginContainer" parent="HUDMarginContainer/HUDVBoxContainer/CoinsWavesMarginContainer/CoinsWavesHBoxContainer/CoinsTextureRect"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -89.5
offset_top = -25.0
offset_right = 89.5
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_bottom = 10

[node name="CoinsLabel" type="Label" parent="HUDMarginContainer/HUDVBoxContainer/CoinsWavesMarginContainer/CoinsWavesHBoxContainer/CoinsTextureRect/MarginContainer"]
texture_filter = 1
layout_mode = 2
size_flags_vertical = 1
theme = ExtResource("2_jel3x")
theme_type_variation = &"UILabel"
text = "INGAMEHUD.COINS.LABEL"
horizontal_alignment = 1
vertical_alignment = 2

[node name="WavesTextureRect" type="TextureRect" parent="HUDMarginContainer/HUDVBoxContainer/CoinsWavesMarginContainer/CoinsWavesHBoxContainer"]
texture_filter = 6
layout_mode = 2
texture = ExtResource("8_ewojn")
expand_mode = 3
stretch_mode = 4

[node name="MarginContainer" type="MarginContainer" parent="HUDMarginContainer/HUDVBoxContainer/CoinsWavesMarginContainer/CoinsWavesHBoxContainer/WavesTextureRect"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -89.5
offset_top = -25.0
offset_right = 89.5
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_bottom = 10

[node name="WavesLabel" type="Label" parent="HUDMarginContainer/HUDVBoxContainer/CoinsWavesMarginContainer/CoinsWavesHBoxContainer/WavesTextureRect/MarginContainer"]
layout_mode = 2
size_flags_vertical = 1
theme = ExtResource("2_jel3x")
theme_type_variation = &"UILabel"
text = "INGAMEHUD.WAVES.LABEL"
horizontal_alignment = 1
vertical_alignment = 2

[node name="NewWaveCountLabel" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -412.0
offset_top = 4.0
offset_right = -101.0
offset_bottom = 72.0
grow_horizontal = 0
theme = ExtResource("2_jel3x")
theme_type_variation = &"HeaderSmall"
theme_override_font_sizes/font_size = 25
text = "New wave in XX.XX s"
script = ExtResource("9_o6rym")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -256.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = -5

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_constants/margin_left = 20

[node name="BuildButton" type="TextureButton" parent="VBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(110, 90)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme = ExtResource("2_jel3x")
toggle_mode = true
texture_normal = ExtResource("12_7moo4")
texture_pressed = ExtResource("10_sc2vu")
ignore_texture_size = true
stretch_mode = 4

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_jel3x")
theme_override_styles/panel = SubResource("StyleBoxTexture_f3r3y")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="TowerCard" parent="VBoxContainer/PanelContainer/MarginContainer/HBoxContainer" instance=ExtResource("3_mkldi")]
texture_filter = 1
layout_mode = 2
tower = ExtResource("4_ro8fv")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_omyie")
}
autoplay = "show_tower_list"

[connection signal="pressed" from="MarginContainer/PauseButton" to="." method="_on_pause_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/BuildButton" to="." method="_on_build_button_pressed"]
